unpackaged/main/default/objects/OrderApi__Badge_Workflow__c/OrderApi__Badge_Workflow__c.object-meta.xml
<CustomObject>
    <description>Trigger the assignment and unassignment of Badges to Contacts using Badge Workflow</description>
    <label>Badge Workflow</label>
    <nameField>
        <label>Badge Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>