unpackaged/main/default/objects/OrderApi__Badge_Workflow__c/fields/OrderApi__Assigned_Contacts__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assigned_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated/Override ** Checked when the Type field set to &quot;Assigned Contacts&quot;.</description>
    <inlineHelpText>** System Calculated/Override ** Checked when the Type field set to &quot;Assigned Contacts&quot;.</inlineHelpText>
    <label>Assigned Contacts</label>
    <type>Checkbox</type>
</CustomField>