unpackaged/main/default/objects/OrderApi__Badge_Workflow__c/fields/OrderApi__Auto_Expire__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Expire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Badge will automatically unassign itself from the Contact record when the Assignment record becomes in active. &quot;Is Active&quot; is unchecked. Defaults unchecked.</description>
    <inlineHelpText>When checked, the Badge will automatically unassign itself from the Contact record when the Assignment record becomes in active. &quot;Is Active&quot; is unchecked. Defaults unchecked.</inlineHelpText>
    <label>Auto Expire</label>
    <type>Checkbox</type>
</CustomField>