unpackaged/main/default/objects/OrderApi__Badge_Workflow__c/fields/OrderApi__Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Badge_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to the related Badge Type</description>
    <inlineHelpText>** Required ** Link to the related Badge Type</inlineHelpText>
    <label>Badge Type</label>
    <referenceTo>OrderApi__Badge_Type__c</referenceTo>
    <relationshipLabel>Workflow</relationshipLabel>
    <relationshipName>Badge_Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>