unpackaged/main/default/objects/OrderApi__Badge_Workflow__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Item</description>
    <inlineHelpText>Link to the related Item</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Badge Workflows</relationshipLabel>
    <relationshipName>Badge_Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>