unpackaged/main/default/objects/OrderApi__Badge_Workflow__c/fields/OrderApi__Line_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Line_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated/Override ** Checked when the Type field set to &quot;Line Account&quot;.</description>
    <inlineHelpText>** System Calculated/Override ** Checked when the Type field set to &quot;Line Account&quot;.</inlineHelpText>
    <label>Line Account</label>
    <type>Checkbox</type>
</CustomField>