unpackaged/main/default/objects/OrderApi__Badge_Workflow__c/fields/OrderApi__Line_Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Line_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated/Override ** Checked when the Type field set to &quot;Line Contact&quot;.</description>
    <inlineHelpText>** System Calculated/Override ** Checked when the Type field set to &quot;Line Contact&quot;.</inlineHelpText>
    <label>Line Contact</label>
    <type>Checkbox</type>
</CustomField>