unpackaged/main/default/objects/OrderApi__Badge_Workflow__c/fields/OrderApi__Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Type__c</fullName>
    <description>** Required ** Select &quot;Line Contact&quot; to assign the Badge to the purchasing Customer as defined in the &quot;Contact&quot; lookup field on the Sales Order Line. Select &quot;Assigned Contacts&quot; to give the Badge to all &quot;Active&quot; assigned Contacts.</description>
    <inlineHelpText>** Required ** Select &quot;Line Contact&quot; to assign the Badge to the purchasing Customer as defined in the &quot;Contact&quot; lookup field on the Sales Order Line. Select &quot;Assigned Contacts&quot; to give the Badge to all &quot;Active&quot; assigned Contacts.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Line Contact</fullName>
                <default>true</default>
                <label>Line Contact</label>
            </value>
            <value>
                <fullName>Assigned Contacts</fullName>
            </value>
            <value>
                <fullName>Line Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>